# Shadow_Assignment

./: CMakeLists.txt  Doxyfile  Readme.md
src/: Camera.cpp  Camera.h  CommonValues.h  DirectionalLight.cpp  DirectionalLight.h  Game.cpp  Game.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Model.cpp  Model.h  MyWindow.cpp  MyWindow.h  OmniShadowMap.cpp  OmniShadowMap.h  PointLight.cpp  PointLight.h  Shader.cpp  Shader.h  ShadowMap.cpp  ShadowMap.h  SpotLight.cpp  SpotLight.h  Texture.cpp  Texture.h  main.cpp  mainHeader.h
